tests/ui/dyn-compatibility/by-value-self-use.stderr
error[E0161]: cannot move a value of type `dyn Bar`
  --> $DIR/by-value-self-use.rs:15:5
   |
LL |     t.bar()
   |     ^ the size of `dyn Bar` cannot be statically determined

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0161`.
